@@ -171,6 +171,22 @@ static int cvtdberr(/*@unused@*/ dbiIndex dbi, const char * msg, int error, int 
 }
 /*@=globuse =mustmod @*/
 
+/**
+ * Return (possibly renamed) tagName. Handles Filedigests -> Filemd5s renaming.
+ * @param value		tag value
+ * @return		tag string
+ */
+static const char * mapTagName(int value)
+	/*@*/
+{
+    const char * s = tagName(value);
+    if (s == NULL)
+	s = "";
+    else if (!strcmp(s, "Filedigests"))
+	s = "Filemd5s";
+    return s;
+}
+
 static int db_fini(dbiIndex dbi, const char * dbhome,
 		/*@null@*/ const char * dbfile,
 		/*@unused@*/ /*@null@*/ const char * dbsubfile)
@@ -937,9 +953,9 @@ static int db3close(/*@only@*/ dbiIndex dbi, /*@unused@*/ unsigned int flags)
     } else {
 #ifdef	HACK	/* XXX necessary to support dbsubfile */
 	dbfile = (dbi->dbi_file ? dbi->dbi_file : db3basename);
-	dbsubfile = (dbi->dbi_subfile ? dbi->dbi_subfile : tagName(dbi->dbi_rpmtag));
+	dbsubfile = (dbi->dbi_subfile ? dbi->dbi_subfile : mapTagName(dbi->dbi_rpmtag));
 #else
-	dbfile = (dbi->dbi_file ? dbi->dbi_file : tagName(dbi->dbi_rpmtag));
+	dbfile = (dbi->dbi_file ? dbi->dbi_file : mapTagName(dbi->dbi_rpmtag));
 	dbsubfile = NULL;
 #endif
     }
@@ -952,7 +968,7 @@ static int db3close(/*@only@*/ dbiIndex dbi, /*@unused@*/ unsigned int flags)
 	db = dbi->dbi_db = NULL;
 
 	rpmMessage(RPMMESS_DEBUG, _("closed   db index       %s/%s\n"),
-		dbhome, (dbfile ? dbfile : tagName(dbi->dbi_rpmtag)));
+		dbhome, (dbfile ? dbfile : mapTagName(dbi->dbi_rpmtag)));
 
     }
 
@@ -1023,7 +1039,7 @@ static int db3close(/*@only@*/ dbiIndex dbi, /*@unused@*/ unsigned int flags)
 
 		rpmMessage(RPMMESS_DEBUG, _("verified db index       %s/%s\n"),
 			(dbhome ? dbhome : ""),
-			(dbfile ? dbfile : tagName(dbi->dbi_rpmtag)));
+			(dbfile ? dbfile : mapTagName(dbi->dbi_rpmtag)));
 
 	        /*
 		 * The DB handle may not be accessed again after
@@ -1115,9 +1131,9 @@ static int db3open(rpmdb rpmdb, rpmTag rpmtag, dbiIndex * dbip)
     } else {
 #ifdef	HACK	/* XXX necessary to support dbsubfile */
 	dbfile = (dbi->dbi_file ? dbi->dbi_file : db3basename);
-	dbsubfile = (dbi->dbi_subfile ? dbi->dbi_subfile : tagName(dbi->dbi_rpmtag));
+	dbsubfile = (dbi->dbi_subfile ? dbi->dbi_subfile : mapTagName(dbi->dbi_rpmtag));
 #else
-	dbfile = (dbi->dbi_file ? dbi->dbi_file : tagName(dbi->dbi_rpmtag));
+	dbfile = (dbi->dbi_file ? dbi->dbi_file : mapTagName(dbi->dbi_rpmtag));
 	dbsubfile = NULL;
 #endif
     }
@@ -1227,7 +1243,7 @@ static int db3open(rpmdb rpmdb, rpmTag rpmtag, dbiIndex * dbip)
      */
     if ((oflags & DB_CREATE) && (oflags & DB_RDONLY)) {
 	/* dbhome is writable, and DB->open flags may conflict. */
-	const char * dbfn = (dbfile ? dbfile : tagName(dbi->dbi_rpmtag));
+	const char * dbfn = (dbfile ? dbfile : mapTagName(dbi->dbi_rpmtag));
 	/*@-mods@*/
 	const char * dbf = rpmGetPath(dbhome, "/", dbfn, NULL);
 	/*@=mods@*/
@@ -1336,7 +1352,7 @@ assert(rpmdb && rpmdb->db_dbenv);
 /*@=branchstate@*/
 
     rpmMessage(RPMMESS_DEBUG, _("opening  db index       %s/%s %s mode=0x%x\n"),
-		dbhome, (dbfile ? dbfile : tagName(dbi->dbi_rpmtag)),
+		dbhome, (dbfile ? dbfile : mapTagName(dbi->dbi_rpmtag)),
 		prDbiOpenFlags(oflags, 0), dbi->dbi_mode);
 
     if (rc == 0) {
