@@ -14,6 +14,7 @@
 	- popt: allow tests to pass in distcheck where builddir != srcdir.
 	- configure: modern usage.
         - enable runtime relocation
+	- revert Filedigests -> Filemd5s index name.
 	
 4.4.8 -> 4.4.9:
 	- start rpm-4.4.9 devel.
